--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
 <div class="d-flex justify-content-center" style="margin-top: 20px;">
     <div class="card" style="max-width: 400px; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-        <div class="d-flex text-wrap gap-5 card-body">
+        <div class="d-flex text-wrap gap-5 card-body buttons">
             <div class="d-flex justify-content-sm-around ">
-                <button type="button" class="btn btn-primary planet">Planet</button>
+                <button type="button" class="btn btn-primary planets">Planet</button>
             </div>
             <div class="d-flex justify-content-sm-around ">
-                <button type="button" class="btn btn-primary character">Сharacter</button>
+                <button type="button" class="btn btn-primary people">People</button>
             </div>
             <div class="d-flex justify-content-sm-around ">
-                <button type="button" class="btn btn-primary technique">Technique</button>
+                <button type="button" class="btn btn-primary vehicles">Vehicles</button>
             </div>
         </div>
     </div>
@@ -31,7 +31,7 @@
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col">
+        <div class="col info">
 
         </div>
     </div>
