--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <div class="card" style="max-width: 400px; border-radius: 15px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <div class="d-flex text-wrap gap-5 card-body buttons">
             <div class="d-flex justify-content-sm-around ">
-                <button type="button" class="btn btn-primary planets">Planet</button>
+                <button type="button" class="planets btn btn-primary">Planet</button>
             </div>
             <div class="d-flex justify-content-sm-around ">
-                <button type="button" class="btn btn-primary people">People</button>
+                <button type="button" class="people btn btn-primary">People</button>
             </div>
             <div class="d-flex justify-content-sm-around ">
-                <button type="button" class="btn btn-primary vehicles">Vehicles</button>
+                <button type="button" class="vehicles btn btn-primary">Vehicles</button>
             </div>
         </div>
     </div>
