--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
 
-<div id="example"></div>
+<div id="example">
+    <div class="container">
+        <div class="row">
+            <div class="col">
 
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./js/index.js"></script>
 </body>
 </html>
