--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div id="example">
     <div class="container">
         <div class="row">
-            <div class="col">
-
+            <div class="col d-flex justify-content-center mt-5">
+                <button type="button" class="btn btn-primary">Primary</button>
             </div>
         </div>
     </div>
