--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="toggle"
                      data-bs-toggle="tooltip" data-bs-placement="top"
                      data-bs-custom-class="custom-tooltip"
-                     data-bs-title="This top tooltip is themed via CSS variables."
+                     data-bs-title="Open this modal window and read an info!"
                 >
                     <button type="button"
                             class="btn btn-primary"
@@ -39,9 +39,12 @@
                             <div class="modal-body">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. A alias amet, atque commodi dolore esse eveniet exercitationem fuga id maiores nisi repudiandae saepe ullam. Modi.
                             </div>
-                            <div class="modal-footer">
+                            <div class="modal-footer" id="liveAlertPlaceholder">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Alert</button>
+
+                                <div>
+                                    <button type="button" class="btn btn-primary" id="liveAlertBtn">Alert</button>
+                                </div>
                             </div>
                         </div>
                     </div>
