--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="example">
     <div class="container">
         <div class="row">
-            <div class="col d-flex justify-content-center mt-5">
+            <div class="col d-flex flex-column align-items-center gap-4 justify-content-center mt-5">
                 <!-- Button trigger modal -->
                 <div class="toggle"
                      data-bs-toggle="tooltip" data-bs-placement="top"
@@ -50,12 +50,22 @@
                     </div>
                 </div>
 
+                <!-- Moment.js -->
+                <div class="card">
+                    <div class="card-body">
+
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
 </div>
 
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="./js/index.js"></script>
+<script src="./public/moment.min.js"></script>
+<script src="./js/index.js" type="module"></script>
+
+
 </body>
 </html>
