HW19.1_v7_'use scripts build'

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 </div>
 
 <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="./js/index.js" type="module"></script>
+<script src="build/index.js"></script>
+<script src="build/fetch.js"></script>
+<script src="build/displayData.js"></script>
 </body>
 </html>
