--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../src/style/style.css">
 </head>
 <body>
 
@@ -78,7 +78,7 @@
 </div>
 
 <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../public/moment.min.js"></script>
+<script src="moment.min.js"></script>
 <script src="src/jsjs" type="module"></script>
 
 
