--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
 
-<div id="example"></div>
+<h1>Simple ToDo List</h1>
+<div class="container">
+    <input type="text" id="todo-input" placeholder="Enter a task">
+    <button id="add-btn">Add Task</button>
+</div>
+<ul id="todo-list"></ul>
 
 <script src="./js/index.js"></script>
 </body>
