--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div class="container">
     <input type="text" id="todo-input" placeholder="Enter a task">
     <button id="add-btn">Add Task</button>
+    <button id="get-btn">Get all data</button>
 </div>
 <ul id="todo-list"></ul>
 
